# One-Search-Agent-for-ROUD-scenarios

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-analysis.txt  requirements-runtime.txt
.github/: copilot-instructions.md
analysis/: analysis_tool.py  compare_offline_2d_3d.py
configs/: field_experiment.yaml
data/jemerg24-filtered/: jemerg24-filtered_0.db3  metadata.yaml
data/jemerg24-realTime/: metadata.yaml  rosbag2_2024_06_14-09_04_54_0.db3
docs/: ARCHITECTURE.md  DATASET.md  REPRODUCING_RESULTS.md
sarfis/: README.md  start_sarfis.m
sarfis/DEM files/: README.md
sarfis/Matlab functions/DEM/: XYZ2grid.m  XYZread.m
sarfis/Matlab functions/GPX/: GPSll2utm.m  GPSutm2ll.m  GPXGenerar.m
sarfis/Matlab functions/GUI/: AgenteDefinir.m  AgenteInsertar.m  AgenteRepresentar.m  Celda2Punto.m  EntornoDefinir.m  EntornoRepresentar.m  GUI.fig  GUI.m  ObjetivoInsertar.m  ObjetivoRepresentar.m  POIInsertar.m  POIRepresentar.m  Punto2Celda.m  PuntoInsercion.m  TrayectoriaRepresentar.m  mostrarFigura.m  representarWaypointsROS.m
src/osa_roud/: __init__.py
src/osa_roud/ros_nodes/: FX8_medianBoth.py  __init__.py  data_visualization.py  gpsMovil2Nav_fx8.py  infoViewer_fx8.py  inputViewer_fx8.py  multilateration_for_OSA.py  sendDataTo_ROS2node.py  viewer_for_server.py
tests/: test_repository_contract.py  test_sarfis_contract.py
tools/: extract_topics.py  instructions.txt  mapEarth.py  run_altitude_sweep.sh
